# bearded-dangerzone

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  Doxyfile  Pipfile  README.md  clean-cmake
cmake/: FindGLFW.cmake
empty_space_removal/: CMakeLists.txt
empty_space_removal/src/: binaryvolume.h  cmdline.h  main.cpp  point3.h
instancing/: CMakeLists.txt
instancing/src/: BBox.cpp  BBox.h  instmain.cpp
instancing/src/tiny_obj_loader/: tiny_obj_loader.cc
libcruft/: CMakeLists.txt
libcruft/include/bd/geo/: axis.h  mesh.h  wireframebox.h
libcruft/include/bd/graphics/: renderer.h  shader.h  vertexarrayobject.h
libcruft/include/bd/io/: CMakeLists.txt
libcruft/include/bd/io/indexfile/: indexfile.h
libcruft/include/bd/io/indexfile/v2/: jsonindexfile.h
libcruft/include/bd/volume/: block.h
libcruft/src/bd/geo/: axis.cpp  mesh.cpp  wireframebox.cpp
libcruft/src/bd/graphics/: renderer.cpp  shader.cpp  texture.cpp
libcruft/src/bd/io/: CMakeLists.txt  datatypes.cpp  datfile.cpp
libcruft/src/bd/io/indexfile/: indexfile.cpp  indexfileheader.cpp
libcruft/src/bd/io/indexfile/v2/: jsonindexfile.cpp
libcruft/src/bd/volume/: block.cpp  volume.cpp
libcruft/test/test_io/: test_indexfile.cpp
matrix_benchmark/: CMakeLists.txt
matrix_benchmark/src/: main.cpp
preproc/src/: indexfile.py  main.py  pyproc.py  volume.py
preprocessor/: CMakeLists.txt
preprocessor/src/: blockcollection2.cpp  blockcollection2.h  blockingdatareader.h  cmdline.cpp  cmdline.h  fileblock.h  indexfile.cpp  indexfile.h  main.cpp
profile_parser/: parse_nvpm.py
python/benchmark_runner/: bmrun.py
python/makevol/: makevol.py
rawhist/: CMakeLists.txt
rawhist/src/: cmdline.cpp  cmdline.h  main.cpp
resample/: CMakeLists.txt  resample
scene_graph/: CMakeLists.txt  main.cpp  simplecontextcontroller.cpp  simplecontextcontroller.h  simplerenderloop.cpp  simplerenderloop.h
scripts/: runpreproc_bunny.sh  runpreproc_hop.sh  runpreproc_oa2.sh
shared/: CMakeLists.txt
shared/file/: datareader.h  datatypes.cpp  datatypes.h
shared/file/tiny_obj_loader/: tiny_obj_loader.h
shared/geometry/: BBox.cpp  BBox.h  axis.cpp  axis.h  mesh.cpp  mesh.h  quad.cpp  quad.h
shared/graphics/: BBox.h  axis.cpp  quad.cpp  quad.h  renderstate.h  vertexarrayobject.cpp  vertexarrayobject.h  view.cpp  view.h
shared/include/bd/file/: datareader.h
shared/include/bd/graphics/: BBox.h  axis.h  quad.h  shader.h  vertexarrayobject.h  vertexbufferobject.h
shared/include/bd/log/: gl_log.h
shared/include/bd/scene/: renderstate.h  transformable.h  view.h
shared/include/bd/util/: bdobj.h  boundingbox.h  context.h  contextcontroller.h  glfwcontext.h  shader.h  texture.h  transform.h  transformable.h  translatable.h
shared/log/: gl_log.cpp  gl_log.h
shared/src/bd/: CMakeLists.txt
shared/src/bd/graphics/: BBox.cpp  CMakeLists.txt  CMakeLists.txt.old  axis.cpp  quad.cpp  shader.cpp  texture.cpp  vertexarrayobject.cpp  view.cpp
shared/src/bd/log/: gl_log.cpp
shared/src/bd/scene/: CMakeLists.txt  renderstate.cpp  transform.cpp  transformable.cpp  view.cpp
shared/src/bd/util/: CMakeLists.txt  bdobj.cpp  boundingbox.cpp  context.cpp  glfwcontext.cpp  shader.cpp  texture.cpp  transform.cpp  transformable.cpp  util.cpp
shared/src/graphics/: axis.h
shared/src/log/: gl_log.cpp
shared/src/util/: texture.cpp  texture.h  transform.cpp  transformable.cpp  util.h
shared/util/: boundingbox.cpp  boundingbox.h  context.cpp  context.h  contextcontroller.h  glfwcontext.cpp  glfwcontext.h  shader.cpp  shader.h  texture.cpp  texture.h  transform.cpp  transform.h  transformable.cpp  transformable.h  translatable.h  translation.h  util.cpp  util.h
simple_blocks/: CMakeLists.txt  Doxyfile  run.sh
simple_blocks/shaders/: alpha_blending.frag  frag_shading_otfgrads.glsl  frag_vertcolor.glsl  frag_volumesampler_noshading.glsl  isosurface.frag  maximum_intensity_projection.frag  maximum_intensity_projection.vert  vert_vertexcolor_passthrough.glsl
simple_blocks/src/: axis.h  axis_enum.h  block.cpp  block.h  blockcollection.cpp  blockcollection.h  blockloader.cpp  blockloader.h  blockrenderer.cpp  blockrenderer.h  classificationtype.h  cmdline.cpp  cmdline.h  colormap.cpp  colormap.h  constants.cpp  constants.h  controlpanel.cpp  controlpanel.h  controls.cpp  controls.h  create_vao.cpp  create_vao.h  glfw_callbacks.cpp  glfw_callbacks.h  load_transfer.cpp  loop.cpp  loop.h  main.cpp  nvpm.cpp  nvpm.h  nvtools.h  renderer.cpp  renderer.h  renderhelp.cpp  renderhelp.h  semathing.h  sliceset.cpp  sliceset.h  slicingblockrenderer.cpp  (+7 more)
simple_blocks/src/io/: blockcollection.cpp  blockcollection.h  blockloader.cpp
simple_blocks/src/messages/: message.h  messagebroker.cpp  messagebroker.h  recipient.h
simple_blocks/src/raycaster/: blockraycaster.cpp  blockraycaster.h
simple_blocks/src/renderer/: blockraycaster.cpp  blockraycaster.h  blockrenderer.cpp  blockrenderer.h  create_vao.cpp  create_vao.h  slicingblockrenderer.cpp  slicingblockrenderer.h
simpleblocking/src/: main.cpp
simplevr/: .cproject  .project  CMakeLists.txt
simplevr/shaders/: simple-color-frag.glsl  simple-vs.glsl  sub-quads-vs.glsl  sub-quads-vs.glsl~  volume-frag.glsl
simplevr/src/: block.cpp  block.h  blockscollection.cpp  blockscollection.h  cmdline.cpp  cmdline.h  geometry.cpp  geometry.h  main.cpp  transferfunction.cpp  transferfunction.h  vertexarrayobject.h  vertexbufferobject.h  volrend.cpp  volrend.h  volrendloop.cpp  volrendloop.h  volume.cpp  volume.h
template/: CMakeLists.txt
template/src/: main.cpp
test/: CMakeLists.txt
test/empty_space_removal_test/: .CMakeLists.txt.swp  CMakeLists.txt
test/empty_space_removal_test/src/: main.cpp
test/shared_test/: CMakeLists.txt
test/shared_test/src/: transform_test.cpp  transformable_test.cpp
test/simple_blocks_test/: CMakeLists.txt
test/simple_blocks_test/src/: blockloader_test.cpp  simple_blocks_test.cpp  simple_blocks_tests.cpp
test/simplevr_test/: CMakeLists.txt
test/simplevr_test/src/: test_main.cpp  test_main2.cpp
vs/: Libs.local.props.default  bearded-dangerzone.sln
(+22 files in other folders)
